resources/css/app.css
body {
  background-color: #f3f3f3;
  background: linear-gradient(90deg, #D4D4D4, #F4F4F4, #FFFFFF, #F4F4F4, #D4D4D4);
}

.status-image {
  width: 7px; 
  height: 1em;
  vertical-align: center;
}

.reviewer-text {
  font-weight: bold;
}

.hold-text {
  color: white;
  background-color: red;
  padding: 2px 6px 4px 6px;
}

.certify-text {
  color: white;
  background-color: green;
  padding: 2px 6px 4px 6px;
}

.cancel-text {
  color: black;
  background-color: yellow;
  padding: 2px 6px 4px 6px;
}

.admincertify-text, .fasttrack-text {
  color: black;
  background-color: #11DD11;
  padding: 2px 6px 4px 6px;
}

.comments-text {
  font-weight: bold;
}

.official {
  background-color: #CCFFCC !important;
}

.unofficial {
  background-color: #FFFFCC !important;  
}

.reserved {
  background-color: #CCCCCC !important;
}

.obsolete {
  background-color: #FFCCCC !important;
  
}

.detail-img.segment {
  max-width: 40%;
}

.ui.form textarea {
	font-family: monospace;
	color: black;
}

pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

.ui.feed > .event > .content .partevent.summary {
  font-size: 0.91em;
  font-weight: 600;
}

.pattern.segment {
   height: 100%;
}

.ui.feed > .event > .content .extra.text {
  max-width: 95%;
}

